// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows error on missed package.json 1`] = `
"[41m[30m ERROR [39m[49m [31mSize Limit did’t find [33mpackage.json[31m.[39m
[31m        Create npm package and run Size Limit there.[39m
"
`;

exports[`shows migration guide for npm users 1`] = `
"[31mInstall Size Limit preset depends on type of the project[39m

For application, where you send JS bundle directly to users
  [33mnpm install --save-dev @size-limit/preset-app[39m
For frameworks, components and big libraries
  [33mnpm install --save-dev @size-limit/preset-big-lib[39m
For small (< 10 KB) libraries
  [33mnpm install --save-dev @size-limit/preset-small-lib[39m
Check out docs for more comlicated cases
  [33mhttps://github.com/ai/size-limit/[39m
"
`;

exports[`shows migration guide for yarn users 1`] = `
"[31mInstall Size Limit preset depends on type of the project[39m

For application, where you send JS bundle directly to users
  [33myarn add --dev @size-limit/preset-app[39m
For frameworks, components and big libraries
  [33myarn add --dev @size-limit/preset-big-lib[39m
For small (< 10 KB) libraries
  [33myarn add --dev @size-limit/preset-small-lib[39m
Check out docs for more comlicated cases
  [33mhttps://github.com/ai/size-limit/[39m

You can remove size-limit dependency: [33myarn remove size-limit[39m
"
`;

exports[`shows own error in JSON format 1`] = `
"{
  \\"error\\": \\"Size Limit did’t find \`package.json\`. Create npm package and run Size Limit there.\\"
}
"
`;
